adjusted igneus preset hue to have correct contrast with red invalid msg

--- a/src/app/components/user-preferences/user-preferences.component.scss
+++ b/src/app/components/user-preferences/user-preferences.component.scss
@@ -44,8 +44,8 @@
 }
 
 .igneous-theme {
-    $start-color: hsl(10, 80%, 35%);
-    $end-color: hsl(40, 70%, 50%);
+    $start-color: hsl(40, 80%, 35%);
+    $end-color: hsl(10, 70%, 50%);
 
     color: var(--c-foreground-1);
     border: 1px solid var(--c-background-4);
